style.css
@import url("https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;500;600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");

:root {
  font-size: 65%;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;

  color: white;
}

html {
  height: 100vh;
}

body {
  background: #181719;
}

body > div {
  overflow-x: hidden;
  position: relative;
}

/*#region Nav*/

nav {
  height: 8vh;
  display: flex;
  justify-content: space-between;
}

nav .logo {
  font-family: "Crimson Pro", serif;
  font-size: 2rem;
  text-decoration: none;

  margin-top: 2rem;
  margin-left: 2rem;
  padding: 1rem;

  border: 1.5px solid white;

  transition: 0.4s border ease;
}

.nav-links {
  width: 100%;
  height: 100vh;
  background: rgb(27, 27, 27);

  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;

  list-style: none;

  position: absolute;
  right: 0;

  transform: translateX(100%);
  transition: all 0.6s ease-in;

  z-index: 2;
}

.nav-active {
  transform: translateX(0%);
}

.nav-active li a:hover {
  font-size: 30px;
}

.nav-links li a {
  font-family: "Montserrat";
  font-size: 20px;

  text-decoration: none;
  border: none;

  transition: all 0.4s ease;
}

.nav-links li:nth-child(1) {
  font-weight: 700;
}

.burger {
  margin-top: 2rem;
  margin-right: 2rem;

  cursor: pointer;
  z-index: 2;
}

.burger div {
  width: 30px;
  height: 5px;

  margin: 3px;

  border-radius: 5px;
  background-color: white;

  transition: all 0.6s ease;
}

.toggle .line1 {
  transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .line2 {
  opacity: 0;
}
.toggle .line3 {
  transform: rotate(45deg) translate(-5px, -6px);
}

@keyframes navLinkFade {
  from {
    opacity: 0;
    transform: translateX(100px);
  }
  to {
    opacity: 1;
    transform: translateX(0px);
  }
}
/*#endregion*/

/*#region Main*/
main {
  margin: 5rem 2rem;
}

main section {
  position: relative;
}

main section > h1 {
  font-family: "Lora", serif;
  font-size: 5rem;
  font-weight: normal;

  word-spacing: 0.2rem;

  margin-bottom: 3rem;
}

main section > p {
  width: 32rem;

  font-family: "Montserrat", sans-serif;
  font-weight: 300;
  font-size: 2rem;
}

main section .more-container {
  display: flex;
  align-items: center;

  margin: 3rem 0 5rem;

  cursor: pointer;
}

main section .more-container small {
  font-family: "Montserrat", sans-serif;
  font-size: 2.5rem;
  font-weight: 600;

  margin-right: 1rem;
}

main section .more-container .material-icons {
  font-size: 3.5rem;
}

main section > img {
  width: 100%;
  height: 40rem;
}

main section .post {
  width: 90%;
  height: auto;

  background: #181719;
  border: none;

  padding: 1.5rem 2.5rem 2.5rem;

  position: absolute;
  bottom: -110px;
  right: 16px;

  box-shadow: 0 5px 20px black;
}

main section .post header {
  display: flex;
  justify-content: flex-start;
  align-items: center;

  margin-bottom: 2.5rem;
}

main section .post header img {
  border-radius: 50%;
  height: 5.5rem;
  width: 5.5rem;

  margin-right: 2rem;
}

main section .post header div h3 {
  font-family: "Montserrat";
  font-size: 1.6rem;
  font-weight: 500;

  margin-bottom: 0.5rem;
}

main section .post header div h4 {
  font-family: "Montserrat";
  font-size: 1.3rem;
  font-weight: 500;
  color: #828282;
}

main section .post main {
  margin-top: 0;
  margin-bottom: 1rem;
}

main section .post main p {
  width: 65%;

  font-family: "Lora";
  font-weight: 700;
  font-size: 2.2rem;

  margin-left: -1.7rem;
}

/*#endregion*/

footer {
  display: flex;
  justify-content: center;
  margin: 180px auto 0;
  width: 100%;
}

footer p {
  font-size: 1.5rem;

  padding: 1rem 2rem;
  border-top: 2px solid #a9a9a9;
}

@media screen and (min-width: 769px) {
  .burger {
    display: none;
  }

  nav .nav-links {
    display: flex;
  }
}

